fix: code font size being too large

--- a/assets/css/components/markdown/typography.css
+++ b/assets/css/components/markdown/typography.css
@@ -40,7 +40,7 @@ pre {
   @apply bg-[#eff1f5] dark:bg-[#1e1e2e];
 
   code {
-    @apply font-mono leading-snug;
+    @apply font-mono text-base leading-snug;
   }
 }
 
